--- a/Protokoll O3/Theorie.tex
+++ b/Protokoll O3/Theorie.tex
@@ -11,7 +11,7 @@
 Ausgehend von der Wellennatur des lässt sich eine Lichtwelle an Punkt P durch ihre elektrische Feldstärke beschreiben. Diese Beträgt:\\
 
 \begin{center}
-   ${\vec{E}=\vec{A}cos(\omega*t-\vec{k}\vec{x}-\delta)}$ %Kursiv machen
+   ${\vec{E}=\vec{A}\cos(\omega*t-\vec{k}\vec{x}-\delta)}$ %Kursiv machen
 \end{center}
 Das Elektrische-Feld der Welle setzt sich zusammen aus dem A*cos wobei das A die amplitude und der cos die Welle beschreibt. Im Argument des cosinus ist zu finden:\\
 Zum einen das $\omega*t$, welches die auslekung der schwingung in Abhängigkeit mit der zeit beschreibt, dann $\vec{k}$ beschreibt den Wellenzahlvektor, $\vec{x}$ den Ort der Welle und $\delta$ die Phasenkonstante.
