--- a/Protokoll O3/Theorie.tex
+++ b/Protokoll O3/Theorie.tex
@@ -13,13 +13,20 @@ Ausgehend von der Wellennatur des lässt sich eine Lichtwelle an Punkt P durch i
 \begin{center}
    ${\vec{E}=\vec{A}\cos(\omega*t-\vec{k}\vec{x}-\delta)}$ 
 \end{center}
-Das Elektrische-Feld der Welle setzt sich zusammen aus dem A*cos wobei das A die amplitude und der cos die Welle beschreibt. Im Argument des cosinus ist zu finden:\\
-Zum einen das $\omega*t$, welches die auslekung der schwingung in Abhängigkeit mit der zeit beschreibt, dann $\vec{k}$ beschreibt den Wellenzahlvektor, $\vec{x}$ den Ort der Welle und $\delta$ die Phasenkonstante.
+Das Elektrische-Feld der Welle setzt sich zusammen aus dem A*cos wobei das 
+A die amplitude und der cos die Welle beschreibt. Im Argument des cosinus 
+ist zu finden:\\
+Zum einen das $\omega*t$, welches die auslekung der schwingung in Abhängigkeit 
+mit der zeit beschreibt, dann $\vec{k}$ beschreibt den Wellenzahlvektor, 
+$\vec{x}$ den Ort der Welle und $\delta$ die Phasenkonstante.
 
 \subsection{Interferenz}
 Damit Wellen Interferieren müssen einige Eigenschaften zutreffen:\\
 Die Wellen müssen Koheränt sein, 
-dass bedeuted sie zueinander eine zeitlich feste Phasenbeziehung haben. Damit zwei Wellen miteinander Interferieren dürfen sie auch nicht senkrecht zueinander stehen. 
-Wenn diese Bedingungen erfüllt werden dann können sich die Wellen gegenseitig beinflussen oder auch Interferieren. 
-Die stärkste Form der Interferenz tritt auf wenn die Wellen zueinander jeweils um ganzzahlige $pi$ verschoben sind. 
-Bei ungeraden $\pi$ kommt es zu destruktiver Interferenz, bei geraden $pi$ kommt es zu konstruktiver Interferenz
+dass bedeuted sie zueinander eine zeitlich feste Phasenbeziehung haben. 
+Damit zwei Wellen miteinander Interferieren dürfen sie auch nicht senkrecht 
+zueinander stehen. Wenn diese Bedingungen erfüllt werden dann können sich 
+die Wellen gegenseitig beinflussen oder auch Interferieren. Die stärkste Form 
+der Interferenz tritt auf wenn die Wellen zueinander jeweils um ganzzahlige 
+$pi$ verschoben sind. Bei ungeraden $\pi$ kommt es zu destruktiver Interferenz, 
+bei geraden $pi$ kommt es zu konstruktiver Interferenz
