--- a/Protokoll O3/Titelblatt.tex
+++ b/Protokoll O3/Titelblatt.tex
@@ -110,11 +110,17 @@
 \pagestyle{fancy}
 \justifying
 \input{Einleitung}
+\newpage
 \input{Theorie}
+\newpage
 \input{Versuchsbeschreibung}
+\newpage
 \input{AuswertungundDiskussion}
+\newpage
 \input{Zusammenfassung}
+\newpage
 \input{Laborbuch(Anhang)}
+\newpage
 \input{Literaturverzeichnis}
 
 
