--- a/Protokoll O3/Versuchsbeschreibung.tex
+++ b/Protokoll O3/Versuchsbeschreibung.tex
@@ -1,6 +1,11 @@
 \section{Versuchsbeschreibung}
 \subsection{Versuchsaufbau}
-
+\begin{wrapfigure}{r}{0.4\textwidth} % r=rechts, l=links, 0.4=Breite 
+        \centering
+        \includegraphics[width=0.9\linewidth]{Bilder/Versuchsaufbau O3.jpeg}
+        \caption{Versuchsaufbau}
+       \label{fig:SpASkizze}
+\end{wrapfigure}
 Bei dem zu betrachtenden Versuch, handelt es sich um einen simplen Versuchsaufbau auf einer 
 Optischen Bank. Die zu verwendeten Bauteile sind folgende: Zwei lampen, einmal eine 
 monochromatische Lampe wie zum beispiel eine Natriumdampf-Lampe und eine lampe mit einem 
