--- a/Protokoll O3/Titelblatt.tex
+++ b/Protokoll O3/Titelblatt.tex
@@ -75,18 +75,16 @@
    \vspace{1cm}
 
 
-     \begin{minipage}{0.7\textwidth}
-        {\large \setstretch{2}{Gruppe: \hspace{2,8cm} G 06}}\\ \vspace{0,3cm}   
+     \begin{minipage}{0.5\textwidth}
+        {\large \setstretch{2}{Gruppe: \hspace{2,8cm} G 04}}\\ \vspace{0,3cm}   
     {\large \setstretch{2}{Versuchsdatum: \hspace{1,55cm}\Versuchsdatum}}\\\vspace{0,3cm}
      {\large \setstretch{2}{Abgabedatum: \hspace{1,8cm}\Abgabedatum}}\\\vspace{1,5cm}
     {\large \setstretch{2}{Gemeinsames Versuchsprotokoll}}\\
      {\large \setstretch{2}{Ferdinand Frey\\Tom Glaser}}
-        
+     
     \end{minipage}
-     \begin{minipage}{0.3\textwidth}
-         \begin{flushright}
-            \includegraphics[width=1\textwidth,height=0.1\textheight,scale = 0.9]{Bilder/Logo.jpg}
-         \end{flushright}
+     \begin{minipage}{0.5\textwidth}
+            \includegraphics[width =\linewidth]{Bilder/Logo.jpg}
     \end{minipage}\hfill
 
 
