--- a/Protokoll O3/AuswertungundDiskussion.tex
+++ b/Protokoll O3/AuswertungundDiskussion.tex
@@ -1,1 +1,46 @@
 \section{Auswertung}
+\subsection{Teil 1}
+
+Folgende zehn Radien konnten von dem Schirm abgelesen werden:
+
+
+
+
+\begin{table}[h!]
+
+\large   % oder \Large, \LARGE, \huge
+\centering
+\begin{tabular}{|c|c|}
+
+\hline
+\textit{n} & $r_n$ in mm \\
+\hline
+1 & 4.5 \\
+\hline
+2 & 5.5 \\
+\hline
+3 & 6.5 \\
+\hline
+4 & 7.1 \\
+\hline
+5 & 7.9 \\
+\hline
+6 & 8.2 \\
+\hline
+7 & 8.9 \\
+\hline
+8 & 9.2 \\
+\hline
+9 & 9.7 \\
+\hline
+10 & 10.1 \\
+\hline
+\end{tabular}
+\end{table}
+
+\textbf {Tabelle 1:}
+\caption{\textit{Die Ringradien der ensprechenden Ordnung für die Natriumdampflampe}}
+\vspace{1cm}
+Die quadtratischen Radien aufgetragen gegen die Ordnung ergeben Folgenden Graphen   
+
+\end{centering}
