Use Git LFS for image files

--- a/Protokoll O3/AuswertungundDiskussion.tex
+++ b/Protokoll O3/AuswertungundDiskussion.tex
@@ -3,44 +3,155 @@
 
 Folgende zehn Radien konnten von dem Schirm abgelesen werden:
 
-
-
-
 \begin{table}[h!]
-
-\large   % oder \Large, \LARGE, \huge
+\large
 \centering
+\label{tab:ringradien}
 \begin{tabular}{|c|c|}
-
 \hline
 \textit{n} & $r_n$ in mm \\
 \hline
 1 & 4.5 \\
-\hline
 2 & 5.5 \\
-\hline
 3 & 6.5 \\
-\hline
 4 & 7.1 \\
-\hline
 5 & 7.9 \\
-\hline
 6 & 8.2 \\
-\hline
 7 & 8.9 \\
-\hline
 8 & 9.2 \\
-\hline
 9 & 9.7 \\
-\hline
 10 & 10.1 \\
 \hline
 \end{tabular}
+
+\caption{\textit{Die Ringradien der entsprechenden Ordnung für die Natriumdampflampe.}}
+
 \end{table}
 
-\textbf {Tabelle 1:}
-\caption{\textit{Die Ringradien der ensprechenden Ordnung für die Natriumdampflampe}}
-\vspace{1cm}
-Die quadtratischen Radien aufgetragen gegen die Ordnung ergeben Folgenden Graphen   
+\vspace{0.5cm}
+\noindent
+Die quadratischen Radien aufgetragen gegen die Ordnung ergeben folgenden Graphen.
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{bilder/rngegenn.png}
+    \caption{\textit{Die notierten quadratische Ringradien aufgetragen gegen die Ordnung. Die Filtergerade wurde mittels Python Numpy.polyfit erstellt.}}
+    \label{fig:meinbild}
+\end{figure}
+Unter Weglassung der konstanten Terme der Gleichung GLEICHUNG ergibt sie die Steigung der Filtergerade 
+\begin{equation}
+m = R \cdot \lambda <=> R = \frac{m}{\lambda}
+\label{mrl}
+\end{equation}
+Somit ergibt sich ein Krümmungsradius der Linse $R = 15,28$ m. Unter betrachtder Grenzgeraden ergibt sich ein Fehler von:
+\begin{equation}
+\Delta m = \pm \frac{m_{\text{max}} - m_{\text{min}}}{2} = 1{,}3\,\text{mm}^2
+\label{deltam}
+\end{equation}
+Der Fehler in R:
+\begin{equation}    
+\Delta R = \pm \left( \left| \frac{\delta R}{\delta m} \right| \cdot \Delta \,\text{m} \right) = \pm \frac{\Delta m}{\lambda} = \pm 2,2 m
+\end{equation}
+Das Ergibt einen Relativen Fehler von  $\frac{\Delta R}{R} = 14,4\%.$ Das ist ein recht großer Fehler der durch Ungenauigkeiten beim Ablesen der Radien $r_n$ sowie
+potentiell durch einen Abstand $d_0$ zwischen Glasplatte und Linse enstehn konte. Grund für die Ungenauigkeiten beim Ablesen ist zum Beispiel das die Skala auf dem Schirm nur Milimeterstriche angibt un somit geringere Längen geschätzt werden müssen.
 
-\end{centering}
+\subsection{Teil 2}
+
+Folgende Radien ergaben sich für die verschiedenen Farbfliter:
+
+\begin{table}[h!]
+\centering
+\large
+\label{tab:farbradien}
+\begin{tabular}{|c|c|c|c|}
+\hline
+Ordnung \textit{n} & \textit{gelb} $r_n$ in mm & \textit{blau} $r_n$ in mm & \textit{grün} $r_n$ in mm \\
+\hline
+1 & 3.0 & 3.0 & 3.0 \\
+2 & 4.2 & 4.1 & 4.2 \\
+3 & 5.1 & 5.0 & 5.1 \\
+4 & 6.0 & 5.5 & 5.9 \\
+5 & 6.9 & 5.9 & 6.5 \\
+6 & 7.2 & 6.3 & 7.1 \\
+7 & 7.9 & - & 7.5 \\
+8 & 8.3 & - & 8.0 \\
+
+
+
+\hline
+\end{tabular}
+\caption{\textit{Gemessene Radien für verschiedene Filterfarben.}}
+\end{table}
+\noindent
+im Folgenden sind die Messpunkte gegen die Ordnung aufgetragen:
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.6\textwidth]{bilder/3Farbenplotrn.png}
+    \caption{\textit{Die notierten quadratische Ringradien der jeweiligen Farben aufgetragen gegen die Ordnung. Die Filtergeraden wurde mittels Python Numpy.polyfit erstellt.}}
+    \label{fig:farben}
+\end{figure}
+\noindent
+Somit die Steigungen der Filtergerade:
+\begin{table}[H]
+\centering
+\large
+\begin{tabular}{|c|c|c|c|}
+\hline
+ & Gelber Farbefilter & Grüner Farbefilter & Blauer Farbefilter \\
+\hline
+Filtergerade & 8,716 mm$^2$ & 7,824 mm$^2$& 6,077 mm$^2$\\
+\hline
+Grenzgeraden 1 & 7,883 mm$^2$ & 7,163 mm$^2$& 5,441 mm$^2$ \\
+\hline
+Grenzgeraden 2 & 9,628 mm$^2$& 8,576 mm$^2$ & 6,78 mm$^2$ \\
+\hline
+\end{tabular}
+\caption{\textit{Steigungen der quadratischen Ringradien für die verschiedenen Filterfarben. Grenzgeraden wurden mit Hilfe von Python erstellt}}
+\label{tab:steigungen}
+\end{table}
+Die Steigungen der Grenzgeraden wurden aus folgendem Diagramm entnommen. Die Diagramme der anderen Farben im Anhang.
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{bilder/Grenzgeraden gelb.png}
+    \caption{\textit{Die Grenzgeraden für den Gelben Farbfliter Die Filtergeraden wurde mittels Python Numpy.polyfit erstellt.}}
+    \label{fig:gelb}
+\end{figure}
+\noindent
+Nach Gleichung (\ref{mrl}) gilt für die Wellenlänge:
+\begin{equation}
+\lambda = \frac{m}{R}
+\end{equation}
+Wobei der Fehler ist gegen durch folgende Formel, wobei $\Delta m$ aus Formel (\ref{deltam}) und $\Delta R$ aus Formel (9): 
+\[
+\Delta \lambda = \pm \left(
+\left| \frac{\partial \lambda}{\partial m} \right| \cdot \Delta m
++
+\left| \frac{\partial \lambda}{\partial R} \right| \cdot \Delta R
+\right)
+= \pm \left(
+\frac{\Delta m}{R} + \frac{m \cdot \Delta R}{R^2}
+\right)
+\]
+Dann für Die Wellenlängen der Farben folgt. Literaturwerte wurden entnommen aus [1]:
+\begin{table}[H]
+\centering
+\large
+\begin{tabular}{|c|c|c|c|}
+\hline
+\textbf{Farbe} & $\lambda_\text{gemessen}$ in nm & $\Delta \lambda$ in nm & $\lambda_\text{Literatur}$ in nm \\
+\hline
+Gelb & 570,4 & 139,2 & 576,96 nm \\
+\hline
+Grün & 512,0 & 120,0 & 546,07 nm \\
+\hline
+Blau & 397,7 & 101,0 & 435,83 nm \\
+\hline
+\end{tabular}
+\caption{\textit{Gemessene Wellenlängen der Filterfarben mit Fehler der Wellenlänge im Vergleich zum Literaturwert.}}
+\label{tab:wellenlaengen}
+\end{table}
+\noindent
+Die berechneten Wellenlängen der drei Filterfarben weisen teils deutliche Abweichungen zu den Literaturwerten auf (vgl. Tabelle \ref{tab:wellenlaengen}). 
+Der größte relative Fehler ergibt sich für das blauen Licht mit etwa 25\%, gefolgt vom  und dem gelbe Licht mit etwa 24\% und dem grünen Licht mit rund 23\%. Dies könnte den Grund haben das beim Blauen Licht der Radius am schwierigsten abzulesen war
+Insgesamt liegen die Messwerte jedoch in der richtigen Größenordnung.
+
+
