--- a/Protokoll O3/Literaturverzeichnis.tex
+++ b/Protokoll O3/Literaturverzeichnis.tex
@@ -1,1 +1,9 @@
 \section{Literaturverzeichnis}
+\begin{thebibliography}{9}
+
+\bibitem{crc}
+David R. Lide, ed., CRC Handbook of Chemistry
+and Physics, Internet Version 2005, <http://www.hbcpnetbase.com>, CRC Press, Boca
+Raton, FL, 2005.
+
+\end{thebibliography}
