--- a/Protokoll O3/Titelblatt.tex
+++ b/Protokoll O3/Titelblatt.tex
@@ -1,6 +1,7 @@
 \documentclass[a4paper,11pt]{article}
 
-
+\usepackage{amsmath}
+\usepackage{float}
 \usepackage[utf8]{inputenc}     
 \usepackage[T1]{fontenc}        
 \usepackage[ngerman]{babel}  
@@ -117,9 +118,7 @@
 \newpage
 \input{AuswertungundDiskussion}
 \newpage
-\input{Zusammenfassung}
-\newpage
-\input{Laborbuch(Anhang)}
+\input{LaborbuchAnhang}
 \newpage
 \input{Literaturverzeichnis}
 
